kubernetes-manifests/graphql-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql-engine
  name: graphql-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphql-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../docker-compose.yml convert
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: graphql-engine
    spec:
      containers:
        - env:
            - name: HASURA_GRAPHQL_DEV_MODE
              value: "true"
            - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
              value: startup, http-log, webhook-log, websocket-log, query-log
            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
              value: "false"
            - name: HASURA_GRAPHQL_METADATA_DATABASE_URL
              value: postgres://postgres:postgres@postgres:5432/postgres
            - name: PG_DATABASE_URL
              value: postgres://postgres:postgres@postgres:5432/postgres
          image: hasura/graphql-engine:v2.0.10
          name: graphql-engine
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
