kubernetes-manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "6543"
      port: 6543
      targetPort: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
