kubernetes-manifests/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.service.expose: "true"
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: web
              servicePort: 3000
status:
  loadBalancer: {}
